--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,11 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url(../fonts/HelveticaNeueCyr-Roman.ttf);
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
