--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-weight: normal;
 }
 
 .header {
@@ -43,6 +44,7 @@
 }
 
 .header__title {
+  max-width: 730px;
   align-self: center;
   font-size: 102px;
   line-height: 96px;
@@ -55,7 +57,6 @@
   max-width: 388px;
   font-size: 18px;
   line-height: 25px;
-  font-weight: normal;
 }
 
 .header__link {
@@ -82,6 +83,41 @@
   background-repeat: no-repeat;
   background-position: center;
   z-index: -1;
+}
+
+.description {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.two-columns__paragraph:nth-of-type(2) {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.span-accent {
+  font-weight: bold;
 }
 
 /* и элемента с модификатором вида ключ-значение */
