--- a/styles/style.css
+++ b/styles/style.css
@@ -20,9 +20,12 @@
   font-weight: normal;
 }
 
+/* стили для header */
 .header {
   position: relative;
+
   display: flex;
+
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
@@ -38,23 +41,30 @@
 
 .logo_place_header {
   position: absolute;
-  top: 30px;
+
   width: 183px;
   height: 32px;
+
+  top: 30px;
 }
 
 .header__title {
   max-width: 730px;
+
   align-self: center;
+
+  font-weight: bold;
   font-size: 102px;
   line-height: 96px;
-  font-weight: bold;
 }
 
 .header__subtitle {
   position: absolute;
-  bottom: 30px;
+
   max-width: 388px;
+
+  bottom: 30px;
+
   font-size: 18px;
   line-height: 25px;
 }
@@ -66,49 +76,60 @@
 
 .header__main-illustration {
   position: absolute;
+
+  width: 765px;
+  height: 608px;
+
   right: 0;
   bottom: 0;
-  height: 608px;
-  width: 765px;
 }
 
 .header__square-pic {
   position: absolute;
+
+  width: 568px;
+  height: 568px;
+
   top: 64px;
   right: 0;
-  height: 568px;
-  width: 568px;
+  z-index: -1;
+
   background-color: #2f80ed;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  z-index: -1;
 }
 
+/* стили для секции description */
 .description {
   display: flex;
   justify-content: center;
+
   padding-top: 100px;
 }
 
 .two-columns {
   display: flex;
   justify-content: space-between;
+
   width: 80%;
 }
 
 .two-columns__brief {
   width: 175px;
-  line-height: 1.2;
-  font-size: 18px;
+
   color: #2f80ed;
+
+  font-size: 18px;
+  line-height: 1.2;
 }
 
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
-  line-height: 34px;
+
   font-size: 24px;
+  line-height: 34px;
 }
 
 .two-columns__paragraph:nth-of-type(2) {
@@ -120,10 +141,19 @@
   font-weight: bold;
 }
 
+/* стили для секции digits */
+.section-title {
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 1.15;
+}
+
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
+
   margin-top: 80px;
+  margin-right: 0;
+  
+  color: white;
 }
