--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,7 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+
   padding-left: 64px;
 }
 
@@ -106,6 +107,7 @@
   justify-content: center;
 
   padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .two-columns {
@@ -142,10 +144,52 @@
 }
 
 /* стили для секции digits */
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 .section-title {
   font-weight: bold;
   font-size: 60px;
   line-height: 1.15;
+}
+
+.section-subtitle {
+  margin-top: 20px;
+
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.table {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1100px;
+}
+
+.table__cell {
+  width: 250px;
+
+  margin-top: 60px;
+}
+
+.table__heading {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 1.15;
+}
+
+.text {
+  margin-top: 20px;
+
+  font-size: 18px;
+  line-height: 1.2;
 }
 
 /* и элемента с модификатором вида ключ-значение */
