--- a/styles/style.css
+++ b/styles/style.css
@@ -29,8 +29,6 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-
-  padding-left: 64px;
 }
 
 .logo {
@@ -47,10 +45,15 @@
   height: 32px;
 
   top: 30px;
+  left: 64px;
 }
 
 .header__title {
+  position: absolute;
+
   max-width: 730px;
+
+  left: 64px;
 
   align-self: center;
 
@@ -64,6 +67,7 @@
 
   max-width: 388px;
 
+  left: 64px;
   bottom: 30px;
 
   font-size: 18px;
@@ -83,6 +87,8 @@
 
   right: 0;
   bottom: 0;
+
+  z-index: -1;
 }
 
 .header__square-pic {
@@ -93,7 +99,8 @@
 
   top: 64px;
   right: 0;
-  z-index: -1;
+
+  z-index: -2;
 
   background-color: #2f80ed;
   background-size: contain;
@@ -241,7 +248,6 @@
   line-height: 51px;
 }
 
-
 /* стили для секции kaufman */
 .kaufman {
   display: flex;
@@ -251,7 +257,6 @@
   padding-top: 90px;
   padding-bottom: 90px;
 }
-
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
