--- a/styles/style.css
+++ b/styles/style.css
@@ -211,7 +211,7 @@
   flex-direction: column;
   align-items: center;
 
-  height: 890px; /* подумать */
+  min-height: 890px;
 
   padding-top: 100px;
 
@@ -219,6 +219,22 @@
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-position: left bottom;
+}
+
+.feynman::before {
+  position: absolute;
+
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  background-color: #f2f2f2;
+  background-size: cover;
+
+  content: '';
+
+  z-index: -1;
 }
 
 .feynman__title {
