--- a/styles/style.css
+++ b/styles/style.css
@@ -238,7 +238,7 @@
 }
 
 .feynman__title {
-  width: 648px;
+  max-width: 648px;
 
   font-weight: bold;
   font-size: 120px;
@@ -281,11 +281,46 @@
 }
 
 /* и элемента с модификатором вида ключ-значение */
+.kaufman {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding-top: 90px;
+  padding-bottom: 90px;
+
+  overflow: hidden;
+}
+
+.table_theme_dark {
+  /* подумать над шириной блока */
+}
+
+.section-title_theme_dark {
+  width: 60%;
+
+  text-align: center;
+  color: #fff;
+}
+
+.section-subtitle_theme_dark {
+  width: 60%;
+
+  text-align: center;
+  color: #fff;
+}
+
 .table__cell_theme_dark {
   width: 200px;
 
   margin-top: 80px;
   margin-right: 0;
-  
-  color: white;
+}
+
+.table__heading_theme_dark {
+  color: #fff;
+}
+
+.text_theme_dark {
+  color: #fff;
 }
