--- a/styles/style.css
+++ b/styles/style.css
@@ -270,6 +270,8 @@
 
 /* стили для секции kaufman */
 .kaufman {
+  position: relative;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -278,18 +280,10 @@
   padding-bottom: 90px;
 
   background-color: #1f1f1f;
-}
-
-/* и элемента с модификатором вида ключ-значение */
-.kaufman {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  padding-top: 90px;
-  padding-bottom: 90px;
 
   overflow: hidden;
+
+  z-index: -2;
 }
 
 .table_theme_dark {
@@ -323,4 +317,20 @@
 
 .text_theme_dark {
   color: #fff;
+}
+
+.kaufman__triangle {
+  position: absolute;
+
+  top: 0;
+  right: -210px;
+
+  width: 877px;
+  height: 877px;
+
+  background-image: url(../images/kaufman-triangle.svg);
+  background-position: center;
+  background-size: contain;
+
+  z-index: -1;
 }
