--- a/styles/style.css
+++ b/styles/style.css
@@ -79,8 +79,8 @@
 }
 
 .header__link {
-  text-decoration: none;
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .header__main-illustration {
@@ -165,22 +165,31 @@
 }
 
 .section-title {
+  width: 60%;
+
   font-weight: bold;
   font-size: 60px;
   line-height: 1.15;
+
+  text-align: center;
 }
 
 .section-subtitle {
+  width: 60%;
+
   margin-top: 20px;
 
   font-size: 24px;
   line-height: 34px;
+
+  text-align: center;
 }
 
 .table {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+
   width: 1100px;
 }
 
@@ -238,7 +247,7 @@
 }
 
 .feynman__title {
-  max-width: 648px;
+  width: 648px;
 
   font-weight: bold;
   font-size: 120px;
@@ -262,10 +271,11 @@
   bottom: 50%;
 
   color: #2f80ed;
-  text-decoration: none;
 
   font-size: 36px;
   line-height: 51px;
+
+  text-decoration: none;
 }
 
 /* стили для секции kaufman */
@@ -293,15 +303,17 @@
 .section-title_theme_dark {
   width: 60%;
 
-  text-align: center;
   color: #fff;
+
+  text-align: center;
 }
 
 .section-subtitle_theme_dark {
   width: 60%;
 
-  text-align: center;
   color: #fff;
+
+  text-align: center;
 }
 
 .table__cell_theme_dark {
@@ -337,11 +349,12 @@
 
 /* стили для footer */
 .footer {
-  box-sizing: border-box;
   min-height: 350px;
 
   padding-top: 60px;
   padding-bottom: 40px;
+
+  box-sizing: border-box;
 
   color: #fff;
 
@@ -352,11 +365,10 @@
   display: flex;
   justify-content: space-between;
 
+  width: 90%;
   min-height: 250px;
 
   margin: 0 auto;
-
-  width: 90%;
 }
 
 .footer__column_content_copyright {
