--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,7 @@
 
 .logo {
   background-image: url(../images/logo_place_header.svg);
+
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -55,7 +56,7 @@
 .header__title {
   position: absolute;
 
-  max-width: 730px;
+  width: 730px;
 
   left: 64px;
 
@@ -69,7 +70,7 @@
 .header__subtitle {
   position: absolute;
 
-  max-width: 388px;
+  width: 388px;
 
   left: 64px;
   bottom: 30px;
@@ -205,7 +206,7 @@
   line-height: 1.15;
 }
 
-.text {
+.table__text {
   margin-top: 20px;
 
   font-size: 18px;
