--- a/styles/style.css
+++ b/styles/style.css
@@ -225,6 +225,8 @@
 
   padding-top: 100px;
 
+  box-sizing: border-box;
+
   background-size: 867px 637px;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
