--- a/styles/style.css
+++ b/styles/style.css
@@ -3,16 +3,6 @@
   padding: 0;
 }
 
-@font-face {
-  font-family: 'Helvetica Neue';
-  src: url(../fonts/HelveticaNeueCyr-Roman.ttf);
-}
-
-@font-face {
-  font-family: 'Helvetica Neue Bold';
-  src: url(../fonts/HelveticaNeueCyr-Bold.ttf);
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -21,7 +11,7 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', 'Helvetica Neue Bold', Arial, sans-serif;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
   font-weight: normal;
 }
 
