--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -25,8 +20,6 @@
   max-height: 756px;
 
   background-color: #f2f2f2;
-
-  z-index: -3;
 }
 
 .logo {
@@ -45,18 +38,22 @@
 
   top: 30px;
   left: 64px;
+
+  z-index: 2;
 }
 
 .header__title {
   width: 730px;
 
-  margin-left: 64px;
+  margin: 0 0 0 64px;
 
   align-self: center;
 
   font-weight: bold;
   font-size: 102px;
   line-height: 96px;
+
+  z-index: 2;
 }
 
 .header__subtitle {
@@ -67,9 +64,13 @@
   left: 64px;
   bottom: 30px;
 
+  margin: 0;
+
   font-weight: normal;
   font-size: 18px;
   line-height: 25px;
+
+  z-index: 2;
 }
 
 .header__link {
@@ -86,7 +87,7 @@
   right: 0;
   bottom: 0;
 
-  z-index: -1;
+  z-index: 1;
 }
 
 .header__square-pic {
@@ -97,8 +98,6 @@
 
   top: 64px;
   right: 0;
-
-  z-index: -2;
 
   background-size: contain;
   background-color: #2f80ed;
@@ -125,6 +124,8 @@
 .two-columns__brief {
   width: 175px;
 
+  margin: 0;
+
   color: #2f80ed;
 
   font-weight: normal;
@@ -141,9 +142,12 @@
   line-height: 34px;
 }
 
-.two-columns__paragraph:nth-of-type(2) {
-  margin-top: 30px;
-  margin-bottom: 30px;
+.two-columns__paragraph {
+  margin: 0 0 30px 0;
+}
+
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
 }
 
 .span-accent {
@@ -163,6 +167,8 @@
 .section-title {
   width: 60%;
 
+  margin: 0;
+
   font-weight: bold;
   font-size: 60px;
   line-height: 1.15;
@@ -173,7 +179,7 @@
 .section-subtitle {
   width: 60%;
 
-  margin-top: 20px;
+  margin: 20px 0 0 0;
 
   font-weight: normal;
   font-size: 24px;
@@ -197,13 +203,15 @@
 }
 
 .table__heading {
+  margin: 0;
+
   font-weight: bold;
   font-size: 24px;
   line-height: 1.15;
 }
 
 .table__text {
-  margin-top: 20px;
+  margin: 20px 0 0 0;
 
   font-weight: normal;
   font-size: 18px;
@@ -224,30 +232,17 @@
 
   box-sizing: border-box;
 
+  background-color: #f2f2f2;
   background-size: 867px 637px;
   background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-position: left bottom;
 }
 
-.feynman::before {
-  position: absolute;
-
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-
-  background-color: #f2f2f2;
-  background-size: cover;
-
-  content: '';
-
-  z-index: -1;
-}
-
 .feynman__title {
   width: 648px;
+
+  margin: 0;
 
   font-weight: bold;
   font-size: 120px;
@@ -257,7 +252,7 @@
 }
 
 .feynman__subtitle {
-  margin-top: 70px;
+  margin: 70px 0 0 0;
 
   font-weight: normal;
   font-size: 36px;
@@ -294,8 +289,6 @@
   background-color: #1f1f1f;
 
   overflow: hidden;
-
-  z-index: -2;
 }
 
 .section-title_theme_dark {
@@ -304,6 +297,12 @@
   color: #fff;
 
   text-align: center;
+
+  z-index: 1;
+}
+
+.table_theme_dark {
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
@@ -312,6 +311,8 @@
   color: #fff;
 
   text-align: center;
+
+  z-index: 1;
 }
 
 .table__cell_theme_dark {
@@ -342,8 +343,6 @@
   background-image: url(../images/kaufman-triangle.svg);
   background-repeat: no-repeat;
   background-position: center;
-
-  z-index: -1;
 }
 
 /* стили для footer */
@@ -393,6 +392,8 @@
 }
 
 .footer__column-heading {
+  margin: 0;
+
   font-weight: bold;
   font-size: 18px;
   line-height: 25px;
