--- a/styles/style.css
+++ b/styles/style.css
@@ -111,7 +111,6 @@
   justify-content: center;
 
   padding-top: 100px;
-  padding-bottom: 100px;
 }
 
 .two-columns {
@@ -150,7 +149,7 @@
   margin-bottom: 0;
 }
 
-.span-accent {
+.two-columns__span-accent {
   font-weight: bold;
 }
 
@@ -326,7 +325,7 @@
   color: #fff;
 }
 
-.text_theme_dark {
+.table__text_theme_dark {
   color: #fff;
 }
 
@@ -384,6 +383,7 @@
 }
 
 .footer__author {
+  margin: 0;
   padding: 18px 0;
 
   font-weight: normal;
@@ -407,6 +407,9 @@
 }
 
 .footer__column-link {
+  display: flex;
+  align-items: center;
+
   color: #fff;
 
   font-weight: normal;
@@ -416,22 +419,9 @@
   text-decoration: none;
 }
 
-.footer__column_content_social .footer__column-link {
-  padding-left: 26px;
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
 
-  background-size: 16px 16px;
-  background-repeat: no-repeat;
-  background-position: left;
-}
-
-.footer__column_content_social .footer__column-link:nth-of-type(1) {
-  background-image: url(../images/facebook_color_white.svg);
-}
-
-.footer__column_content_social .footer__column-link:nth-of-type(2) {
-  background-image: url(../images/vk_color_white.svg);
-}
-
-.footer__column_content_social .footer__column-link:nth-of-type(3) {
-  background-image: url(../images/instagram_color_white.svg);
+  margin-right: 10px;
 }
