--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,10 @@
   text-decoration: none;
 }
 
+.header__link:hover {
+  color: #054db9fd;
+}
+
 .header__main-illustration {
   position: absolute;
 
@@ -142,7 +146,7 @@
 }
 
 .two-columns__paragraph {
-  margin: 0 0 30px 0;
+  margin: 0 0 30px;
 }
 
 .two-columns__paragraph:last-child {
@@ -178,7 +182,7 @@
 .section-subtitle {
   width: 60%;
 
-  margin: 20px 0 0 0;
+  margin: 20px 0 0;
 
   font-weight: normal;
   font-size: 24px;
@@ -193,6 +197,11 @@
   flex-wrap: wrap;
 
   width: 1100px;
+
+  margin: 0;
+  padding: 0;
+
+  list-style-type: none;
 }
 
 .table__cell {
@@ -210,7 +219,7 @@
 }
 
 .table__text {
-  margin: 20px 0 0 0;
+  margin: 20px 0 0;
 
   font-weight: normal;
   font-size: 18px;
@@ -251,7 +260,7 @@
 }
 
 .feynman__subtitle {
-  margin: 70px 0 0 0;
+  margin: 70px 0 0;
 
   font-weight: normal;
   font-size: 36px;
@@ -272,6 +281,10 @@
   line-height: 51px;
 
   text-decoration: none;
+}
+
+.feynman__link:hover {
+  color: #054db9fd;
 }
 
 /* стили для секции kaufman */
@@ -403,7 +416,10 @@
   display: flex;
   flex-direction: column;
 
-  padding: 20px 0 16px 0;
+  margin: 0;
+  padding: 20px 0 16px;
+
+  list-style-type: none;
 }
 
 .footer__column-link {
@@ -417,6 +433,10 @@
   font-size: 18px;
 
   text-decoration: none;
+}
+
+.footer__column-link:hover {
+  color: #a3a6b4;
 }
 
 .footer__social-icon {
