--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -20,6 +29,8 @@
   max-height: 756px;
 
   background-color: #f2f2f2;
+
+  overflow: hidden;
 }
 
 .logo {
@@ -76,10 +87,14 @@
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+
+  transition-property: opacity;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
 }
 
 .header__link:hover {
-  color: #054db9fd;
+  opacity: 0.7;
 }
 
 .header__main-illustration {
@@ -94,6 +109,13 @@
   z-index: 1;
 }
 
+.rotation {
+  animation-name: rotation;
+  animation-duration: 20s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
 .header__square-pic {
   position: absolute;
 
@@ -103,10 +125,7 @@
   top: 64px;
   right: 0;
 
-  background-size: contain;
-  background-color: #2f80ed;
-  background-repeat: no-repeat;
-  background-position: center;
+  background: #2f80ed center/contain no-repeat;
 }
 
 /* стили для секции description */
@@ -114,7 +133,7 @@
   display: flex;
   justify-content: center;
 
-  padding-top: 100px;
+  padding: 100px 0 0;
 }
 
 .two-columns {
@@ -157,14 +176,162 @@
   font-weight: bold;
 }
 
+/* стили для секции techniques */
+.techniques {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 80%;
+
+  margin: 0 auto;
+  padding: 100px 0 0;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  column-gap: 100px;
+
+  width: 920px;
+
+  text-align: center;
+}
+
+.cards__item {
+  flex-basis: 240px;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+
+  margin: 60px 0 43px;
+
+  border-radius: 50%;
+}
+
+.cards__title {
+  margin: 0 0 16px;
+
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 1.15;
+}
+
+.cards__description {
+  margin: 0;
+
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 23px;
+}
+
+/* стили для секции video */
+.video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: 100px 0 0;
+  margin: 0 0 -60px;
+}
+
+.video__iframes {
+  display: flex;
+  gap: 20px;
+
+  margin-top: 50px;
+}
+
+.video__iframe {
+  width: 515px;
+  height: 316px;
+}
+
+/* стили для секции oakley */
+.oakley {
+  display: flex;
+  justify-content: center;
+
+  padding: 160px 0 0;
+
+  background-color: #f2f2f2;
+}
+
+/* стили для секции feynman */
+.feynman {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  min-height: 890px;
+
+  padding: 100px 0 0;
+
+  box-sizing: border-box;
+
+  background-color: #f2f2f2;
+  background-size: 867px 637px;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+}
+
+.feynman__title {
+  width: 648px;
+
+  margin: 0;
+
+  font-weight: bold;
+  font-size: 120px;
+  line-height: 1.15;
+
+  text-align: center;
+}
+
+.feynman__subtitle {
+  margin: 70px 0 0;
+
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 51px;
+}
+
+.feynman__link {
+  position: absolute;
+
+  top: 50%;
+  right: 48px;
+  bottom: 50%;
+
+  color: #2f80ed;
+
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 51px;
+
+  text-decoration: none;
+
+  transition-property: opacity;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
+}
+
+.feynman__link:hover {
+  opacity: 0.7;;
+}
+  
 /* стили для секции digits */
 .digits {
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 100px 0;
 }
 
 .section-title {
@@ -226,65 +393,95 @@
   line-height: 1.2;
 }
 
-/* стили для секции feynman */
-.feynman {
-  position: relative;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  min-height: 890px;
-
-  padding-top: 100px;
-
-  box-sizing: border-box;
+/* стили для секции khan */
+.khan {
+  padding: 105px 0 0 0;
 
   background-color: #f2f2f2;
-  background-size: 867px 637px;
-  background-image: url(../images/feynman.png);
-  background-repeat: no-repeat;
-  background-position: left bottom;
 }
 
-.feynman__title {
-  width: 648px;
+.khan__container {
+  width: 80%;
 
+  margin: 0 auto;
+}
+
+.khan__author {
+  margin: 0;
+
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.khan__title {
   margin: 0;
 
   font-weight: bold;
-  font-size: 120px;
+  font-size: 60px;
   line-height: 1.15;
-
-  text-align: center;
 }
 
-.feynman__subtitle {
-  margin: 70px 0 0;
+.khan__quote {
+  width: 790px;
+
+  margin: 50px 0 0;
 
   font-weight: normal;
-  font-size: 36px;
-  line-height: 51px;
+  font-size: 24px;
+  line-height: 34px;
 }
 
-.feynman__link {
-  position: absolute;
+.khan__quote-author {
+  margin: 36px 0 0;
 
-  top: 50%;
-  right: 48px;
-  bottom: 50%;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 1.15;
+}
+
+.khan__quote-author-subline {
+  margin: 10px 0 68px;
+
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 1.15;
+}
+
+.khan__book-container {
+  display: flex;
+}
+
+.khan__book-pic {
+  width: 620px;
+  height: 608px;
+
+  margin-right: 48px;
+
+  object-fit: cover;
+  object-position: center top;
+
+  background-color: lightgray;
+}
+
+.khan__buy-link {
+  height: 100%;
 
   color: #2f80ed;
 
   font-weight: normal;
-  font-size: 36px;
-  line-height: 51px;
+  font-size: 30px;
+  line-height: 42px;
 
   text-decoration: none;
+
+  transition-property: opacity;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
 }
 
-.feynman__link:hover {
-  color: #054db9fd;
+.khan__buy-link:hover {
+  opacity: 0.7;
 }
 
 /* стили для секции kaufman */
@@ -295,8 +492,7 @@
   flex-direction: column;
   align-items: center;
 
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding: 90px 0;
 
   background-color: #1f1f1f;
 
@@ -330,8 +526,7 @@
 .table__cell_theme_dark {
   width: 200px;
 
-  margin-top: 80px;
-  margin-right: 0;
+  margin: 80px 0 0;
 }
 
 .table__heading_theme_dark {
@@ -355,6 +550,35 @@
   background-image: url(../images/kaufman-triangle.svg);
   background-repeat: no-repeat;
   background-position: center;
+}
+
+/* стили для секции resources */
+.resources {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  padding: 100px 0 217px;
+}
+
+.resources__logo-zone {
+  display: flex;
+  justify-content: center;
+
+  width: 1100px;
+  height: 38px;
+
+  margin: 80px 0 0;
+  padding: 0;
+
+  list-style-type: none;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
+  
+  object-fit: contain;
 }
 
 /* стили для footer */
@@ -433,10 +657,14 @@
   font-size: 18px;
 
   text-decoration: none;
+
+  transition-property: opacity;
+  transition-duration: 0.2s;
+  transition-timing-function: linear;
 }
 
 .footer__column-link:hover {
-  color: #a3a6b4;
+  opacity: 0.7;
 }
 
 .footer__social-icon {
