--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .rotation {
   animation-name: rotation;
   animation-duration: 20s;
