--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -1,9 +1,11 @@
 @keyframes rotation {
   from {
     transform: rotate(0deg);
+    transform-origin: center;
   }
   to {
     transform: rotate(360deg);
+    transform-origin: center;
   }
 }
 
