--- a/pages/index.css
+++ b/pages/index.css
@@ -28,6 +28,20 @@
 @import url(../blocks/table/__text/table__text.css);
 @import url(../blocks/table/__text/_theme/table__text_theme_dark.css);
 
+/* Стили для блока two-columns */
+@import url(../blocks/two-columns/two-columns.css);
+@import url(../blocks/two-columns/__brief/two-columns__brief.css);
+@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
+@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
+@import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
+
+/* Стили для блока cards */
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__image/cards__image.css);
+
 
 /* Стили для header */
 @import url(../blocks/header/header.css);
@@ -39,19 +53,9 @@
 
 /* Стили для секции description */
 @import url(../blocks/description/description.css);
-@import url(../blocks/two-columns/two-columns.css);
-@import url(../blocks/two-columns/__brief/two-columns__brief.css);
-@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
-@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
-@import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
 
 /* Стили для секции techniques */
 @import url(../blocks/techniques/techniques.css);
-@import url(../blocks/cards/cards.css);
-@import url(../blocks/cards/__title/cards__title.css);
-@import url(../blocks/cards/__description/cards__description.css);
-@import url(../blocks/cards/__item/cards__item.css);
-@import url(../blocks/cards/__image/cards__image.css);
 
 /* Cтили для секции video */
 @import url(../blocks/video/video.css);
