--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,5 +1,9 @@
 .two-columns__paragraph {
   margin: 0 0 30px;
+
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 34px;
 }
 
 .two-columns__paragraph:last-child {
