--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,7 +1,8 @@
 .section-subtitle {
   width: 60%;
 
-  margin: 20px 0 0;
+  margin: 0;
+  padding: 0;
 
   font-weight: normal;
   font-size: 24px;
