--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,5 +1,6 @@
 .two-columns__paragraph {
   margin: 0 0 30px;
+  padding: 0;
 
   font-weight: normal;
   font-size: 24px;
@@ -7,5 +8,5 @@
 }
 
 .two-columns__paragraph:last-child {
-  margin-bottom: 0;
+  margin: 0;
 }
