--- a/pages/index.css
+++ b/pages/index.css
@@ -17,6 +17,7 @@
 /* Стили для блока section-subtitle */
 @import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
+@import url(../blocks/section-subtitle/_margin/section-subtitle_margin_top.css);
 
 /* Стили для блока table */
 @import url(../blocks/table/table.css);
@@ -94,6 +95,7 @@
 @import url(../blocks/resources/resources.css);
 @import url(../blocks/resources/__logo/resources__logo.css);
 @import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/resources/__logo-link/resources__logo-link.css);
 
 /* Стили для footer */
 @import url(../blocks/footer/footer.css);
