--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -9,9 +9,7 @@
 
   text-decoration: none;
 
-  transition-property: opacity;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
+  transition: opacity 0.2s linear;
 }
 
 .khan__buy-link:hover {
