--- a/blocks/resources/__logo-link/resources__logo-link.css
+++ b/blocks/resources/__logo-link/resources__logo-link.css
@@ -3,9 +3,7 @@
 
   height: 100%;
 
-  transition-property: opacity;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
+  transition: opacity 0.2s linear;
 }
 
 .resources__logo-link:hover {
