--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -1,9 +1,7 @@
 .cards__title {
   margin: 0 0 16px;
 
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 1.15;
+  font: bold 24px/1.15 'Helvetica Neue', Arial, sans-serif;
 
   text-align: center;
 }
