--- a/blocks/feynman/__subtitle/feynman__subtitle.css
+++ b/blocks/feynman/__subtitle/feynman__subtitle.css
@@ -2,7 +2,5 @@
   margin: 70px 0 0;
   padding: 0;
 
-  font-weight: normal;
-  font-size: 36px;
-  line-height: 51px;
+  font: normal 36px/51px 'Helvetica Neue', Arial, sans-serif;
 }
