--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -4,9 +4,7 @@
   margin: 0;
   padding: 0;
 
-  font-weight: bold;
-  font-size: 120px;
-  line-height: 1.15;
+  font: bold 120px/1.15 'Helvetica Neue', Arial, sans-serif;
 
   text-align: center;
 }
