--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -2,7 +2,5 @@
   margin: 0;
   padding: 18px 0;
 
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 25px;
+  font: normal 18px/25px 'Helvetica Neue', Arial, sans-serif;
 }
