--- a/blocks/footer/__column-heading/footer__column-heading.css
+++ b/blocks/footer/__column-heading/footer__column-heading.css
@@ -2,7 +2,5 @@
   margin: 0;
   padding: 0;
 
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 30px;
+  font: bold 18px/30px 'Helvetica Neue', Arial, sans-serif;
 }
