--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -4,9 +4,7 @@
 
   color: #fff;
 
-  font-weight: normal;
-  line-height: 30px;
-  font-size: 18px;
+  font: normal 18px/30px 'Helvetica Neue', Arial, sans-serif;
 
   text-decoration: none;
 
