--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -9,9 +9,7 @@
   margin: 0;
   padding: 0;
 
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 25px;
+  font: normal 18px/25px 'Helvetica Neue', Arial, sans-serif;
 
   z-index: 2;
 }
