--- a/blocks/khan/__author/khan__author.css
+++ b/blocks/khan/__author/khan__author.css
@@ -2,7 +2,5 @@
   margin: 0;
   padding: 0;
 
-  font-weight: normal;
-  font-size: 30px;
-  line-height: 42px;
+  font: normal 30px/42px 'Helvetica Neue', Arial, sans-serif;
 }
