--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -3,9 +3,7 @@
 
   color: #2f80ed;
 
-  font-weight: normal;
-  font-size: 30px;
-  line-height: 42px;
+  font: normal 30px/42px 'Helvetica Neue', Arial, sans-serif;
 
   text-decoration: none;
 
