--- a/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
+++ b/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
@@ -2,7 +2,5 @@
   margin: 10px 0 68px;
   padding: 0;
 
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 1.15;
+  font: normal 24px/1.15 'Helvetica Neue', Arial, sans-serif;
 }
