--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -4,7 +4,5 @@
   margin: 50px 0 0;
   padding: 0;
 
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 34px;
+  font: normal 24px/34px 'Helvetica Neue', Arial, sans-serif;
 }
