--- a/blocks/khan/__title/khan__title.css
+++ b/blocks/khan/__title/khan__title.css
@@ -2,7 +2,5 @@
   margin: 0;
   padding: 0;
 
-  font-weight: bold;
-  font-size: 60px;
-  line-height: 1.15;
+  font: bold 60px/1.15 'Helvetica Neue', Arial, sans-serif;
 }
