--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -4,9 +4,7 @@
   margin: 0;
   padding: 0;
 
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 34px;
+  font: normal 24px/34px 'Helvetica Neue', Arial, sans-serif;
 
   text-align: center;
 }
