--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -4,9 +4,7 @@
   margin: 0;
   padding: 0;
 
-  font-weight: bold;
-  font-size: 60px;
-  line-height: 1.15;
+  font: bold 60px/1.15 'Helvetica Neue', Arial, sans-serif;
 
   text-align: center;
 }
