--- a/blocks/table/__heading/table__heading.css
+++ b/blocks/table/__heading/table__heading.css
@@ -2,7 +2,5 @@
   margin: 0;
   padding: 0;
 
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 1.15;
+  font: bold 24px/1.15 'Helvetica Neue', Arial, sans-serif;
 }
