--- a/blocks/table/__text/table__text.css
+++ b/blocks/table/__text/table__text.css
@@ -2,7 +2,5 @@
   margin: 20px 0 0;
   padding: 0;
 
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.2;
+  font: normal 18px/1.2 'Helvetica Neue', Arial, sans-serif;
 }
