--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -6,7 +6,5 @@
 
   color: #2f80ed;
 
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.2;
+  font: normal 18px/1.2 'Helvetica Neue', Arial, sans-serif;
 }
