--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -2,9 +2,7 @@
   margin: 0 0 30px;
   padding: 0;
 
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 34px;
+  font: normal 24px/34px 'Helvetica Neue', Arial, sans-serif;
 }
 
 .two-columns__paragraph:last-child {
